--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <header class="header">
         <div class="header__search">
-            <form action="#">
-                <input type="text" placeholder="Поиск">
+            <form action="#" name="form">
+                <input id="search" type="text" placeholder="Поиск">
             </form>
         </div>
         <div class="header__logo">
@@ -62,7 +62,7 @@
                     </ul>
                 </div>
                 <div>
-                    <form class="add" name="add">
+                    <form class="add">
                         <div class="promo__interactive-title">ДОБАВИТЬ НОВЫЙ ФИЛЬМ</div>
                         <span>Введите название фильма</span>
                         <input class="adding__input" type="text" placeholder="Что уже посмотрено...?">
@@ -82,6 +82,6 @@
         </div>
     </main>
 
-    <script src="js/script.js"></script>
+    <script type="module" src="js/script.js"></script>
 </body>
 </html>
